# dboost

./: .gitignore  CMakeLists.txt  README.md
buildtools/: traits_template.sh
buildtools/idl/backends/: cppbackend.py
buildtools/idl/backends/cxxbackend/: __init__.py  adapter.py  header.py  proxy.py  serializer.py  templates.py  tools.py
desiredimpl/00-dbus/: Makefile  client.c  server.c
desiredimpl/01-basic-scenario/: Makefile  adaptor.cpp  exception.h  main.cpp  server.cpp  server.h  timer_adaptor.cpp  timer_adaptor.h  timer_adaptor.hpp  timer_proxy.cpp  timer_proxy.h  timer_proxy.hpp  traits.h
desiredimpl/02-observer/: timer_adaptor.cpp  timer_adaptor.h  timer_observer_adaptor.cpp  timer_observer_adaptor.h  timer_observer_proxy.cpp  timer_observer_proxy.h  timer_proxy.cpp  timer_proxy.h
desiredimpl/03-exceptions/: timer.hpp  timer_adaptor.cpp  timer_adaptor.hpp  timer_proxy.cpp
desiredimpl/04-interface-inheritance/: monitorable_timer.hpp  monitorable_timer_adaptor.cpp  monitorable_timer_adaptor.hpp  monitorable_timer_proxy.cpp  monitorable_timer_proxy.hpp  timer.hpp  timer_adaptor.cpp  timer_adaptor.hpp  timer_proxy.cpp  timer_proxy.hpp
desiredimpl/05-struct-passing/: database_adaptor.cpp  database_adaptor.h  database_proxy.cpp  database_proxy.h  database_utils.h
doc/: architecture.dia
include/: adaptor.h  boost_dispatcher.h  client.h  dbus_ptr.h  dispatcher.h  exception.h  poll_dispatcher.h  ptr.h  ptrutils.h  ref.h  serializer.h  server.h  type_traits.h  utils.h  watch.h
src/: boost_dispatcher.cpp  boost_watch.cpp.1  boost_watch.h  client.cpp  exception.cpp  poll_dispatcher.cpp  server.cpp  server1.cpp  utils.cpp  watch.cpp
test/00-hello-world/: Makefile  hw.cpp
test/01-basic-scenario/: CMakeLists.txt  Makefile  client.cpp  main.cpp  server.cpp  timer.idl  timer_impl.cpp  timer_impl.h
test/02-observer/: Makefile  client.cpp  server.cpp  timer.idl  timer_impl.cpp  timer_impl.h
test/03-exceptions/: client.cpp  timer.idl  timer_impl.cpp  timer_impl.h
test/04-interface-inheritance/: client.cpp  monitorable_timer.idl  monitorable_timer_impl.cpp  monitorable_timer_impl.h  server.cpp  timer.idl
test/05-struct-passing/: Makefile  client.cpp  database.idl  database_impl.cpp  database_impl.h  server.cpp
